--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "quizzy-front",
+            "prefix": "qzy",
             "style": "kebab-case"
           }
         ]
