--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@ngx-translate/core": "^15.0.0",
     "@nx/angular": "17.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
