--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~17.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@nx/angular": "17.1.3",
+    "ngx-socket-io": "^4.6.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
